--- a/Client Base/Client Base.vcxproj.filters
+++ b/Client Base/Client Base.vcxproj.filters
@@ -27,13 +27,7 @@
     <ClCompile Include="Client\ClientManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Client\Modules\AirJump.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Client\Modules\Hitbox.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Client\Modules\Jetpack.cpp">
+    <ClCompile Include="Client\Modules\Freecam.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Client\Modules\TabGUI.cpp">
@@ -42,19 +36,10 @@
     <ClCompile Include="Client\Modules\AutoSprint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Client\Modules\Jesus.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Client\Modules\Killaura.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Client\Modules\TestModule.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Client\Modules\Uninject.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Client\Modules\Instabreak.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,16 +68,10 @@
     <ClInclude Include="SDK\Classes\MultiPlayerLevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Client\Modules\AirJump.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Client\Modules\Hitbox.h">
+    <ClInclude Include="Client\Modules\Freecam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Client\Hooks\KeyItem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Client\Modules\Jetpack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SDK\Classes\Actor.h">
@@ -119,19 +98,10 @@
     <ClInclude Include="Client\Modules\AutoSprint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Client\Modules\Jesus.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Client\Modules\Killaura.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Client\Modules\Uninject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Client\Modules\TestModule.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Client\Modules\Instabreak.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
